--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "authors": [
         {
             "name": "christ",
-            "email": "christmokonda@gmail.com",
+            "email": "christmokonda@gmail.com"
         }
     ],
     "require": {}
