--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,10 @@
             "email": "christmokonda@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "phpunit/phpunit": "^9.5"
+    },
+    "scripts": {
+        "test": "vendor/bin/phpunit CalculatriceTest.php"
+    }
 }
